some more configs

--- a/strimzi/topic-example.yaml
+++ b/strimzi/topic-example.yaml
@@ -6,9 +6,7 @@ metadata:
     # This label tells the Strimzi operator which Kafka cluster this topic belongs to.
     strimzi.io/cluster: my-cluster
 spec:
-  # -- Number of partitions for the topic --
   partitions: 12
-  # -- Number of replicas for each partition --
   replicas: 3
   # -- Topic-specific configurations that override cluster defaults --
   # In this case, we are setting a shorter retention period for this specific topic.
@@ -16,6 +14,10 @@ spec:
     # Retention for this topic is 3 days (in milliseconds)
     retention.ms: 259200000
     # You can override any topic-level configuration here.
-    # If a value is not specified, it will fall back to the template in the Kafka CR,
-    # and then to the broker defaults.
     segment.bytes: 536870912 # 512 MB
+    # 'compact' is used for log compaction, which retains the last known value for each message key.
+    # 'delete' (default) discards old log segments when their retention time or size limit is reached.
+    cleanup.policy: compact,delete
+    # Specifies the compression codec for a given topic.
+    # Valid values: 'uncompressed', 'zstd', 'lz4', 'snappy', 'gzip', 'producer' (default).
+    compression.type: lz4
